welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:13: error: '(' expected but '{' found.
	else if{
               ^SlugTracking:21: error: illegal start of simple expression
  }
  ^