welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  avance()
  if (estSurBiscuit()){
    prendBiscuit()
    return true}
  else if (getCouleurSol()==Color.green){
    recule()
    avance()
    baisseBrosse()
    leveBrosse()
    return false}
	else if{
  	recule()
    gauche()
    return false
  else if (estFaceMur())
  	return false
    
  }
  }
